--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
-  shared_preferences: ^2.3.2
   introduction_screen: ^3.1.14
+  shared_preferences: ^2.3.2
   smooth_page_indicator: ^1.2.0+3
+  iconsax: ^0.0.8
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
